<resources>
    <string name="app_name">Task</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="loading">Loading</string>
    <string name="best_coupons_in_egypt">Best Coupons in Egypt</string>
    <string name="best_coupons_for_you">Best Coupons For You</string>
    <string name="top_stores_in_egypt">Top Stores in Egypt</string>
    <string name="best_deals">Best Deals</string>
    <string name="get_deal">GET DEAL</string>
    <string name="featured_deals">Featured Deals</string>
    <string name="new_year_offers">New Year offers</string>
    <string name="details">Details</string>
    <string name="get_deal_now">GET DEAL NOW</string>
    <string name="recent_categories">Recent Categories</string>
    <string name="mother_s_day_offers">Mother\'s Day offers</string>
    <string name="todays_deals">Todays Deals</string>
    <string name="coupons">coupons</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="brands">Brands</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="up_to_50_off">UP TO %1$s OFF</string>
    <string name="deal_percentage">Up to %1$s from %2$s</string>
    <string name="mother_day_offers">Mother\'s Day Offers</string>
    <string name="best_deal_percentage">UP TO %1$s + %2$s </string>
    <string name="category">category</string>
    <string name="see_all">See All</string>
</resources>